Updates bootstrap stying to fix HTML bugs
Changes bootstrap classes on front end to fix poor responsiveness.
Buttons should no longer overlap with short user email.
Need to figure out how to change text size based on media query.
Have a bug where longer emails automatically
force nav bar to span full page

--- a/assets/styles/theme.scss
+++ b/assets/styles/theme.scss
@@ -3,6 +3,12 @@ $plant-height: $plant-width;
 
 .sidebar {
   background-color: $sidebar-background;
+  // height: inherit;
+  // height: 100%;
+}
+
+body {
+  background: $plot-background;
 }
 
 .plots {
@@ -56,7 +62,7 @@ h6 {
 }
 
 .top {
-  height: 80px;
+  // height: 80px;
 }
 
 .plots-heading {
@@ -68,5 +74,5 @@ h6 {
 // }
 
 .container-fluid {
-  width: 100%;
+  // width: 100%;
 }
